fix: overflow for description in task details

--- a/src/app/main-content/board/task-card/task-details/task-details.component.scss
+++ b/src/app/main-content/board/task-card/task-details/task-details.component.scss
@@ -98,6 +98,8 @@
   // #region description
   .description {
     width: 100%;
+    height: 8rem;
+    overflow-y: auto;
     padding: 1rem 0;
     .descrip {
       font-size: 2rem;
